2016-10-29  Werner Lemberg  <wl@gnu.org>

	Fix clang warnings.

	We now have a new `FT_ENCODING_OTHER' tag used for internal
	purposes.  Since it is not possible to extend an enumeration after
	its definition, replace `FT_Encoding' types with `unsigned long'.

	* src/ftcommon.c (FTDemo_Make_Encoding_Tag): Updated.
	* src/ftcommon.h (FTDemo_Handle): Ditto.

	* src/ftmulti.c (encoding): Use `unsigned long'.
	(main): Updated.

	* src/ftstring.c (Sample): Make array of type `const char*'.
	(status): Use `unsigned long' for `encoding' field.
	Use `const char*' for `text' field.

	* src/ftview.c (status): Use `unsigned long' for `encoding'.
	(FT_ENCODING_OTHER): Use `unsigned long'.

2016-10-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Untested legacy 15/16-bit color fixes.

	Our tools do not use the legacy 15/16-bit color modes. This is mostly
	for the sake of correctness. We might also remove the code.

	* graph/grblit.c (blit_gray{8,}_to_{555,565}): Updated.
	* graph/x11/grx11.c (gr_x11_format_{bgr565,rgb555,bgr555}): Updated.

2016-10-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grblit.c (blit_lcd28_to_24): Typo.

2016-10-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Charmaps): Dump format info.

2016-10-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Recognize other charmaps.

	* src/ftview.c (event_change_encoding): Recognize when
	FT_ENCODING_NONE has special other meaning.
	(write_header): Default case for `status.encoding'.

2016-10-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Fix charmap cycling.

	* src/ftview.c (event_change_encoding): Reimplement relying on
	`cmap_index' field in TFont structure.

2016-10-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Implement cycling through available charmaps.

	* src/ftview.c (event_change_encoding): New function.
	(Process_Event): New [Tab] event to cycle through available charmaps,
	also increase index steps to 16, 256, and 4096.